--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,7 +1,7 @@
 span{
   text-align: center;
   width: 100%;
-  display: inline-block;
+  display: inline-flex;
   overflow: hidden;
   text-overflow: ellipsis;
 }
