--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -87,12 +87,14 @@
   </div>
 
 <script>
-var line = $("")
+// var line = $("")
 var index = []
 var sensordt =[]
+
 <% sensors.forEach(function(sensor){%>
   index.push(sensordt.push(<%=sensor.value%>))
   <%})%>
+
 
   function data(index,sens) {
     var data=[]
@@ -107,6 +109,7 @@ var sensordt =[]
   }
 
 var datag = data(index,sensordt)
+console.log(datag);
 
 $(function() {
   var socket = io()
@@ -128,10 +131,53 @@ $(function() {
 })
 
 
+// function init() {
+//   <% sensors.forEach(function(sensor){%>
+//     index.push(sensordt.push(<%=sensor.value%>))
+//     <%})%>
+//     datag = data(index,sensordt)
+//     datag.forEach(function (data) {
+//       for (var i = 1; i <= data.length; i++) {
+//         arry.push(i)
+//       }
+//     })
+//     label = data(index,arry)
+//     indx=0
+//     datagraph = {
+//       labels:label[indx],
+//       datasets: [
+//         {
+//           label: "My First dataset",
+//           fill: false,
+//           lineTension: 0.1,
+//           backgroundColor: "rgba(75,192,192,0.4)",
+//           borderColor: "rgba(75,192,192,1)",
+//           borderCapStyle: 'butt',
+//           borderDash: [],
+//           borderDashOffset: 0.0,
+//           borderJoinStyle: 'miter',
+//           pointBorderColor: "rgba(75,192,192,1)",
+//           pointBackgroundColor: "#fff",
+//           pointBorderWidth: 1,
+//           pointHoverRadius: 5,
+//           pointHoverBackgroundColor: "rgba(75,192,192,1)",
+//           pointHoverBorderColor: "rgba(220,220,220,1)",
+//           pointHoverBorderWidth: 2,
+//           pointRadius: 1,
+//           pointHitRadius: 10,
+//           data: datag[indx],
+//           spanGaps: false,
+//         }
+//       ]
+//     };
+//
+//     var lineChart = document.getElementById("lineChart")
+//     var myLineChart = Chart.Line(lineChart,{
+//       data:datagraph
+//     })
+//   }
+// setTimeout(init,3000)
 
-// console.log(sensordt.splice(0,4));
-// console.log(data(index));
-// console.log(sensordt);
 var arry = []
 var label = []
 datag.forEach(function (data) {
@@ -141,7 +187,6 @@ datag.forEach(function (data) {
 })
 
 label = data(index,arry)
-console.log(arry);
 
   var indx=0
   var datagraph = {
@@ -209,7 +254,6 @@ datag.forEach(function (data) {
 })
 
 label = data(index,arry)
-console.log(arry);
   // console.log(datag[indx]);
   datagraph = {
     labels: label[indx],
