--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -1,42 +1,5 @@
 <% include partials/header %>
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="5">
-    <title>Version 0.1</title>
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="stylesheet" href="/css/master.css">
-  </head>
-  <body>
-    <nav class="navbar navbar-default">
-  <div class="container">
 
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">GMO</a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/stats">Stats</a></li>
-            <li><a href="/plants">Plants</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Sign Up</a></li>
-        <li><a href="/logout">Logout</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
--->
 <div class="container">
 
 
@@ -47,7 +10,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="well">
-        <form>
+        <form action="/go" method="get">
           <div class="form-group">
             <label for="periode">Periode</label>
             <select id="periode"class="form-control" name="periode">
@@ -64,9 +27,9 @@
               <option>Licht</option>
             </select>
           </div>
-          <div class="form-group">
-            <button class="btn btn-primary"type="submit" name="button">Go</button>
-          </div>
+              <div class="form-group">
+                <button class="btn btn-primary" type="submit" name="button">Go</button>
+              </div>
         </form>
       </div>
     </div>
@@ -87,30 +50,7 @@
   </div>
 
 <script>
-// var line = $("")
-var index = []
-var sensordt =[]
-
-<% sensors.forEach(function(sensor){%>
-  index.push(sensordt.push(<%=sensor.value%>))
-  <%})%>
-
-
-  function data(index,sens) {
-    var data=[]
-    for (var i = 0; i < index.length; i++) {
-      if (i==0) {
-        data.push(sens.splice(0,index[i]))
-      }else {
-        data.push(sens.splice(0,index[i]-index[i-1]))
-      }
-    }
-    return data
-  }
-
-var datag = data(index,sensordt)
-console.log(datag);
-
+// socket
 $(function() {
   var socket = io()
   socket.on("readFile",function (content) {
@@ -130,53 +70,31 @@ $(function() {
   })
 })
 
+</script>
 
-// function init() {
-//   <% sensors.forEach(function(sensor){%>
-//     index.push(sensordt.push(<%=sensor.value%>))
-//     <%})%>
-//     datag = data(index,sensordt)
-//     datag.forEach(function (data) {
-//       for (var i = 1; i <= data.length; i++) {
-//         arry.push(i)
-//       }
-//     })
-//     label = data(index,arry)
-//     indx=0
-//     datagraph = {
-//       labels:label[indx],
-//       datasets: [
-//         {
-//           label: "My First dataset",
-//           fill: false,
-//           lineTension: 0.1,
-//           backgroundColor: "rgba(75,192,192,0.4)",
-//           borderColor: "rgba(75,192,192,1)",
-//           borderCapStyle: 'butt',
-//           borderDash: [],
-//           borderDashOffset: 0.0,
-//           borderJoinStyle: 'miter',
-//           pointBorderColor: "rgba(75,192,192,1)",
-//           pointBackgroundColor: "#fff",
-//           pointBorderWidth: 1,
-//           pointHoverRadius: 5,
-//           pointHoverBackgroundColor: "rgba(75,192,192,1)",
-//           pointHoverBorderColor: "rgba(220,220,220,1)",
-//           pointHoverBorderWidth: 2,
-//           pointRadius: 1,
-//           pointHitRadius: 10,
-//           data: datag[indx],
-//           spanGaps: false,
-//         }
-//       ]
-//     };
-//
-//     var lineChart = document.getElementById("lineChart")
-//     var myLineChart = Chart.Line(lineChart,{
-//       data:datagraph
-//     })
-//   }
-// setTimeout(init,3000)
+<script>
+var index = []
+var sensordt =[]
+
+<% sensors.forEach(function(sensor){%>
+  index.push(sensordt.push(<%=sensor.value%>))
+  <%})%>
+console.log(sensordt);
+  function data(index,sens) {
+    var data=[]
+    for (var i = 0; i < index.length; i++) {
+      if (i==0) {
+        data.push(sens.splice(0,index[i]))
+      }else {
+        data.push(sens.splice(0,index[i]-index[i-1]))
+      }
+    }
+    return data
+  }
+
+var datag = data(index,sensordt)
+console.log(datag);
+
 
 var arry = []
 var label = []
@@ -254,7 +172,6 @@ datag.forEach(function (data) {
 })
 
 label = data(index,arry)
-  // console.log(datag[indx]);
   datagraph = {
     labels: label[indx],
     datasets: [
@@ -282,116 +199,12 @@ label = data(index,arry)
       }
     ]
   };
-
-  // lineChart = document.getElementById("lineChart")
   myLineChart = Chart.Line(lineChart,{
     data:datagraph
   })
-})
 
-
-</script>
-
-
-
-<!-- <div class="row">
-    <div class="col-md-6">
-      <h2>Graph</h2>
-      <canvas id="myChart" width="100" height="100"></canvas>
-      <canvas id="lineChart" width="100" height="100"></canvas>
-    </div>
-    <div class="col-md-6">
-      <div class="jumbotron">
-        <h1>smth</h1>
-      </div>
-    </div>
-
-    <!-- Script form Graph.js , See the Docu for more information-->
-<!--
-<script>
-var temp = document.getElementById('temp').textContent
-var luftfeut= document.getElementById('luftfeut').textContent
-var boden = document.getElementById('boden').textContent
-var sonne = document.getElementById('sonne').textContent
-var pad = document.getElementById('pad').textContent
-var luft = document.getElementById('luft').textContent
-var led = document.getElementById('led').textContent
-
-// TODO: radar chart is beter for data collections or lineChart
-
-var ctx = document.getElementById("myChart");
-var myChart = new Chart(ctx, {
-  type: 'bar',
-  data: {
-      labels: ["temp", "luftfeutigkeit", "boden", "sonne", "pad", "luft","led"],
-      datasets: [{
-          data: [temp, luftfeut, boden, sonne, pad, luft,led],
-          backgroundColor: [
-              'rgba(255, 99, 132, 0.6)',
-              'rgba(54, 162, 235, 0.6)',
-              'rgba(255, 206, 86, 0.6)',
-              'rgba(75, 192, 192, 0.6)',
-              'rgba(153, 102, 255, 0.6)',
-              'rgba(255, 159, 64, 0.6)',
-              'rgba(120, 0, 164, 0.6)'
-          ],
-          borderColor: [
-              'rgba(255,99,132,1)',
-              'rgba(54, 162, 235, 1)',
-              'rgba(255, 206, 86, 1)',
-              'rgba(75, 192, 192, 1)',
-              'rgba(153, 102, 255, 1)',
-              'rgba(255, 159, 64, 1)',
-              'rgba(120, 0, 164, 0.6)'
-          ],
-          borderWidth: 0.5
-      }]
-  },
-  options: {
-      scales: {
-          yAxes: [{
-              ticks: {
-                  beginAtZero:true
-              }
-          }]
-      },responsive:true
-  }
-});
-
-var data = {
-    labels: ["January", "February", "March", "April", "May", "June", "July"],
-    datasets: [
-        {
-            label: "My First dataset",
-            fill: false,
-            lineTension: 0.1,
-            backgroundColor: "rgba(75,192,192,0.4)",
-            borderColor: "rgba(75,192,192,1)",
-            borderCapStyle: 'butt',
-            borderDash: [],
-            borderDashOffset: 0.0,
-            borderJoinStyle: 'miter',
-            pointBorderColor: "rgba(75,192,192,1)",
-            pointBackgroundColor: "#fff",
-            pointBorderWidth: 1,
-            pointHoverRadius: 5,
-            pointHoverBackgroundColor: "rgba(75,192,192,1)",
-            pointHoverBorderColor: "rgba(220,220,220,1)",
-            pointHoverBorderWidth: 2,
-            pointRadius: 1,
-            pointHitRadius: 10,
-            data: [65, 59, 80, 81, 56, 55, 40],
-            spanGaps: false,
-        }
-    ]
-};
-var lineChart = document.getElementById("lineChart")
-var myLineChart = Chart.Line(lineChart,{
-  data:data,
-  options:options
 })
 
 </script>
--->
 
 <% include partials/footer %>
