landing page and styling added

--- a/views/plants.ejs
+++ b/views/plants.ejs
@@ -1,5 +1,6 @@
 <% include partials/header %>
 
+<div class="container">
 <h1>Plants</h1>
 <h2>Profile</h2>
 <button type="button" name="button">Configure profile</button>
