--- a/public/css/master.css
+++ b/public/css/master.css
@@ -5,3 +5,13 @@ span{
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.background{
+  margin-top: -72px;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: #3CA55C;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #B5AC49, #3CA55C);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #B5AC49, #3CA55C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
