--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,13 @@
 <% include partials/header %>
-
-<h1>Login</h1>
-<h3>Form comes here</h3>
-<form action="/login" method="post">
+<div class="background"></div>
+<div class="wrapper">
+<form class="form-signin" action="/login" method="post">
+  <h2 class="form-signin-heading">Please login</h2>
+    <input class="form-control" type="text" name="username" placeholder="username" value="" required="" autofocus="">
+    <input class="form-control" type="password" name="password" placeholder="password" value="" required="">
   <div class="form-group">
-    <input class="form-control" type="text" name="username" placeholder="username" value="">
-  </div>
-  <div class="form-group">
-    <input class="form-control" type="password" name="password" placeholder="password" value="">
-  </div>
-  <div class="form-group">
-    <button class="btn btn-success form-control"type="submit" name="button">Login</button>
+    <button class="btn btn-success btn-lg btn-block" type="submit" name="button">Login</button>
   </div>
 </form>
-
+</div>
 <% include partials/footer %>
