--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,20 +1,11 @@
 <% include partials/header %>
-
-<h1>Sign Up</h1>
-<h3>A form comes here to register a user</h3>
-<%if(err){%>
-  <h1><%=err.message%></h1> 
-<%}%>
-<form action="/register" method="post">
-  <div class="form-group">
-    <input class="form-control" type="text" name="username" placeholder="username" value="">
-  </div>
-  <div class="form-group">
-    <input class="form-control" type="password" name="password" placeholder="password" value="">
-  </div>
-  <div class="form-group">
+<div class="background"></div>
+<div class="wrapper">
+<form class="form-signin" action="/register" method="post">
+  <h2 class="form-signin-heading">Sign Up</h2>
+    <input class="form-control" type="text" name="username" placeholder="username" value="" required="" autofocus="">
+    <input class="form-control" type="password" name="password" placeholder="password" value="" required="">
     <button class="btn btn-success form-control"type="submit" name="button">Sign Up</button>
-  </div>
 </form>
-
+</div>
 <% include partials/footer %>
