--- a/public/css/authstyle.css
+++ b/public/css/authstyle.css
@@ -7,7 +7,7 @@
   max-width: 380px;
   padding: 15px 35px 45px;
   margin: 0 auto;
-  background-color: #fffc;
+  background-color: rgba(240,240,240,0.6);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
