--- a/views/stats/stats.ejs
+++ b/views/stats/stats.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
 
@@ -207,4 +207,4 @@ label = data(index,arry)
 
 </script>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
