--- a/views/plants/index.ejs
+++ b/views/plants/index.ejs
@@ -2,17 +2,23 @@
 
 <div class="container">
   <div class="row">
+    <div class="col-md-3">
+        <a class="btn btn-default btn-sm" href="/plants/new">New</a>
+    </div>
+  </div>
+  <br>
+  <div class="row">
       <%plants.forEach(function(plant){%>
         <div class="col-md-3">
           <div class="well">
-            <p>
               <span>Name: <b> <%=plant.pflanzeName%> </b></span>
-              <a class="btn btn-info btn-sm"href="/plants/<%=plant.id%>">Show</a>
-            </p>
+              <a style="display:inline " class="btn btn-info"href="/plants/<%=plant.id%>">Show</a>
+              <form style="display:inline" action="/plants/setActive/<%=plant.id%>?_method=PUT" method="post">
+                <button class="btn btn-default btn-sm" type="submit">Set Active</button>
+              </form>
           </div>
         </div>
         <%})%>
-        <a href="/plants/new">New</a>
   </div>
 </div>
 
