--- a/views/plants/new.ejs
+++ b/views/plants/new.ejs
@@ -5,28 +5,26 @@
   <div class="form-group">
     <input class="form-control pflanzeName" type="text" name="pflanzeName" placeholder="Pflanze Name" value="">
     <div class="form-inline">
-      <label for="sollLuftFeMIN">MIN :</label>
-      <input class="form-control" type="number" id="sollLuftFeMIN" name="sollLuftFeMIN" placeholder="Luftfeutigkeit" value="">
-      <label for="sollLuftFeMAX">MAX :</label>
-      <input class="form-control" type="number" id="sollLuftFeMAX" name="sollLuftFeMAX" placeholder="Luftfeutigkeit" value="">
+      <label for="sollLuftFeMin">MIN :</label>
+      <input class="form-control" type="number" id="sollLuftFeMin" name="sollLuftFeMin" placeholder="Luftfeutigkeit" value="">
+      <label for="sollLuftFeMax">MAX :</label>
+      <input class="form-control" type="number" id="sollLuftFeMax" name="sollLuftFeMax" placeholder="Luftfeutigkeit" value="">
     </div>
     <div class="form-inline">
-      <label for="sollBodenMIN">MIN :</label>
-      <input class="form-control" type="number" id="sollBodenMIN" name="sollBodenMIN" placeholder="Boden" value="">
-      <label for="sollBodenMAX">MAX :</label>
-      <input class="form-control" type="number" id="sollBodenMAX" name="sollBodenMAX" placeholder="Boden" value="">
+      <label for="sollBodenMin">MIN :</label>
+      <input class="form-control" type="number" id="sollBodenMin" name="sollBodenMin" placeholder="Boden" value="">
+      <label for="sollBodenMax">MAX :</label>
+      <input class="form-control" type="number" id="sollBodenMax" name="sollBodenMax" placeholder="Boden" value="">
     </div>
     <div class="form-inline">
-      <label for="sollLichtMIN">MIN :</label>
-      <input class="form-control" type="number" id="sollLichtMIN" name="sollLichtMIN" placeholder="Licht" value="">
-      <label for="sollLichtMAX">MAX :</label>
-      <input class="form-control" type="number" id="sollLichtMAX" name="sollLichtMAX" placeholder="Licht" value="">
+      <label for="lichtstunden">Lichtstunden :</label>
+      <input class="form-control" type="number" id="lichtstunden" name="lichtstunden" placeholder="Licht" value="">
     </div>
     <div class="form-inline">
-      <label for="sollTempMIN">MIN :</label>
-      <input class="form-control" type="number" id="sollTempMIN" name="sollTempMIN" placeholder="Temperatur" value="">
-      <label for="sollTempMAX">MAX :</label>
-      <input class="form-control" type="number" id="sollTempMAX" name="sollTempMAX" placeholder="Temperatur" value="">
+      <label for="sollTempMin">MIN :</label>
+      <input class="form-control" type="number" id="sollTempMin" name="sollTempMin" placeholder="Temperatur" value="">
+      <label for="sollTempMax">MAX :</label>
+      <input class="form-control" type="number" id="sollTempMax" name="sollTempMax" placeholder="Temperatur" value="">
     </div>
     <button type="submit" class="btn btn-primary send"name="button">Send</button>
   </div>
